--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(untitled main.cpp Scanner.cpp Scanner.h Person.cpp Person.h)
+add_executable(untitled main.cpp Person.cpp Person.h VladClasses/Manager.cpp VladClasses/Manager.h)
